--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright  2019 Git.Training 
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,12 +16,12 @@
 <body>
 	<main class="container">
 	<!-- Content Goes Here -->
-		<p>
-			Just some content
-		</p>
+		  <p>
+          Dummy content.
+      </p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git Training 2019</p>
 	</footer>
 </body>
 </html>
