--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
 	Copyright  2019 Git.Training
-	Some silly changes from master branch
 -->
 <head>
 	<title>Silly Changes on Master</title>
@@ -16,14 +15,13 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler Content -->
 		<p>
 			Just stuff for now,
 			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Jason Taylor 2019</p>
+		<p>&copy; Git Training 2019</p>
 	</footer>
 </body>
 </html>
